# stalemate

./: .gitignore  CMakeLists.txt
include/stalemate/: backtrace.hpp  condition_variable.hpp  mutex.hpp  policies.hpp  recursive_mutex.hpp
include/stalemate/detail/: make_log_message.hpp  ostream_flags_guard.hpp  threading_primitive_guard.hpp  timer.hpp
include/stalemate/policies/logging/: log_to_stderr.hpp  policies.hpp
include/stalemate/policies/primitive_id/: empty.hpp  owner_type.hpp
include/stallmate/: amalgamation.hpp
include/stallmate/detail/: config.hpp
include/stallmate/detail/impl/: backtrace_impl.hpp
include/stallmate/policies/primitive_id/: policies.hpp
scripts/: print_backtrace.py  print_backtrace.sh
test/: test.cpp
